Fixing broken styles.
Former-commit-id: 768b8e8b0f02888305eadc7deea3e89025fe3122 [formerly 3c28d14c8654f54fe6f39ffc4342a61e41bb1ad1 [formerly 4e1e946f1e52d9efb7928d82de3041c77c892f29]]
Former-commit-id: d46872804139980215fcdf5a8126b5ff4f87596a
Former-commit-id: 282131e5ef999348dea693a3550d7a08ae93e4b7 [formerly 6490434657213130b5e22e9612ac8c2bd9bf15e1]
Former-commit-id: 280333a796a84a1aaaee6d6a089a7fdbd774bb8d

--- a/frontend/app/assets/stylesheets/_product-group.scss
+++ b/frontend/app/assets/stylesheets/_product-group.scss
@@ -985,6 +985,17 @@
 
 /* Taken from _interim.scss then edited */
 .product-group {
+	.suppliers {
+		padding-right: emCalc(20px);
+		span {
+			font-family: $watg-font-light;
+			display: block;
+		}
+		img {
+			margin: 0 emCalc(10px) emCalc(10px) 0;
+			float: left;
+		}
+	}
 	.suppliers + p {
 		strong {
 			text-transform: capitalize;
